--- a/login.html
+++ b/login.html
@@ -4,10 +4,11 @@
     		<h3 class="panel-title">PPOutreach</h3>
   		</div>
   		<div class="panel-body">
+  		<div ng-controller="profileController">
   			<div style="width: 50%; margin-left: auto; margin-right: auto">
 				<div class="input-group" style="padding: 25px 50px 5px">
   					<span class="input-group-addon">@</span>
-  					<input type="text" class="form-control" placeholder="Username">
+  					<input type="text" ng-model="newValue" class="form-control" placeholder="Username">
 				</div>
 				<div class="input-group" style="padding: 5px 50px 25px">
         			<span class="input-group-addon">#</span>
@@ -16,10 +17,11 @@
     		</div>
     		<div ng-controller="LoginButtonsCtrl" style="margin-left:auto; margin-right:auto">
     			<div class="btn-group" role="group" style="margin-left:auto; margin-right:auto">
-  					<button type="button" class="btn btn-default"><a href>Register</a></button>
-  					<button type="button" class="btn btn-default"><a href="#/user/profile">Login</a></button>
+  					<button type="button" class="btn btn-default" ng-click="setString(newValue);go('/user/profile')">Register</button>
+  					<button type="button" class="btn btn-default" ng-click="setString(newValue);go('/user/profile')">Login</button>
 				</div>
 			</div>
+		</div>
   		</div>
 	</div>
 </div>
