--- a/profile.html
+++ b/profile.html
@@ -37,13 +37,26 @@
     		<h3 class="panel-title">Profile</h3>
   		</div>
   		<div class="panel-body">
-  			<div ng-repeat="field in data.fields" class="input-group input-group-lg" style="padding-bottom:5px">
-  				<span class="input-group-addon">{{field.key}}</span>
-  				<input type="text" class="form-control" ng-model="field.val">
+  		<div ng-controller="profileController">
+  			<div class="input-group" style="padding-bottom:5px">
+  				<span class="input-group-addon">Username</span>
+  				<input ng-model="objectValue.username" type="text" class="form-control">
+  			</div>
+  			<div class="input-group" style="padding-bottom:5px">
+  				<span class="input-group-addon">Firstname</span>
+  				<input ng-model="objectValue.firstname" type="text" class="form-control">
+  			</div>
+  			<div class="input-group" style="padding-bottom:5px">
+  				<span class="input-group-addon">Surname</span>
+  				<input ng-model="objectValue.surname" type="text" class="form-control">
+  			</div>
+  			<div class="input-group" style="padding-bottom:5px">
+  				<span class="input-group-addon">School</span>
+  				<input ng-model="objectValue.school" type="text" class="form-control">
 			</div>
 			<div class="progress">
   				<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-    				Progress: {{data.progress}}0%
+    				Progress: {{objectValue.progress}}0%
   				</div>
 			</div>
 			<div>
@@ -51,6 +64,12 @@
   					<span aria-hidden="true">Submit Changes</span>
 				</button>
 			</div>
+			<ul>
+            	<li><b>myController2</b> (values will change when Set Values is clicked or when 2-way binding textbox is modified)</li>
+            	<li>{{stringValue()}}</li>
+            	<li>{{objectValue.data}}</li>
+        	</ul>
+		</div>
   		</div>
 	</div>
 </div>
