--- a/profile.html
+++ b/profile.html
@@ -19,10 +19,6 @@
             				<li><a href="#/user/datasets">Data Sets</a></li>
             				<li><a href="#/user/analysis">Analysis</a></li>
             				<li><a href="#/user/reports">Reports</a></li>
-            				<li class="divider"></li>
-            				<li><a href="#">Separated link</a></li>
-            				<li class="divider"></li>
-            				<li><a href="#">One more separated link</a></li>
           				</ul>
         			</li>
       			</ul>
@@ -44,18 +40,18 @@
   			</div>
   			<div class="input-group" style="padding-bottom:5px">
   				<span class="input-group-addon">Firstname</span>
-  				<input ng-model="objectValue.firstname" type="text" class="form-control">
+  				<input ng-model="newValue1" type="text" class="form-control">
   			</div>
   			<div class="input-group" style="padding-bottom:5px">
   				<span class="input-group-addon">Surname</span>
-  				<input ng-model="objectValue.surname" type="text" class="form-control">
+  				<input ng-model="newValue2" type="text" class="form-control">
   			</div>
   			<div class="input-group" style="padding-bottom:5px">
   				<span class="input-group-addon">School</span>
-  				<input ng-model="objectValue.school" type="text" class="form-control">
+  				<input ng-model="newValue3" type="text" class="form-control">
 			</div>
 			<div class="progress">
-  				<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+  				<div class="progress-bar" role="progressbar" aria-valuenow="{{objectValue.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
     				Progress: {{objectValue.progress}}0%
   				</div>
 			</div>
@@ -64,11 +60,6 @@
   					<span aria-hidden="true">Submit Changes</span>
 				</button>
 			</div>
-			<ul>
-            	<li><b>myController2</b> (values will change when Set Values is clicked or when 2-way binding textbox is modified)</li>
-            	<li>{{stringValue()}}</li>
-            	<li>{{objectValue.data}}</li>
-        	</ul>
 		</div>
   		</div>
 	</div>
