error in chart fixed

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         			<input type="password" class="form-control" id="inputPassword" placeholder="Password">
     			</div>
     		</div>
-    		<div ng-controller="LoginButtonsCtrl" style="margin-left:auto; margin-right:auto">
+    		<div style="margin-left:auto; margin-right:auto">
     			<div class="btn-group" role="group" style="margin-left:auto; margin-right:auto">
   					<button type="button" class="btn btn-default" ng-click="setString(newValue);go('/user/profile')">Register</button>
   					<button type="button" class="btn btn-default" ng-click="setString(newValue);go('/user/profile')">Login</button>
