--- a/profile.html
+++ b/profile.html
@@ -40,15 +40,19 @@
   			</div>
   			<div class="input-group" style="padding-bottom:5px">
   				<span class="input-group-addon">Firstname</span>
-  				<input ng-model="newValue1" type="text" class="form-control">
+  				<input ng-model="objectValue.firstname" type="text" class="form-control">
   			</div>
   			<div class="input-group" style="padding-bottom:5px">
   				<span class="input-group-addon">Surname</span>
-  				<input ng-model="newValue2" type="text" class="form-control">
+  				<input ng-model="objectValue.surname" type="text" class="form-control">
   			</div>
   			<div class="input-group" style="padding-bottom:5px">
   				<span class="input-group-addon">School</span>
-  				<input ng-model="newValue3" type="text" class="form-control">
+  				<input ng-model="objectValue.school" type="text" class="form-control">
+			</div>
+			<div class="input-group" style="padding-bottom:5px">
+  				<span class="input-group-addon">Email</span>
+  				<input ng-model="objectValue.email" type="text" class="form-control">
 			</div>
 			<div class="progress">
   				<div class="progress-bar" role="progressbar" aria-valuenow="{{objectValue.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
